# poetry

./: .gitignore  README.md  README2.md
ScrapeMynet/: .gitignore  README.md  pyproject.toml
ScrapeMynet/src/ScrapeMynet/: Project1-'asalsayıbulucu'.py  data_fetcher.py  data_processor.py  inhiritanceandoverridemethods.py  main.py  untitled9.py  user_interface.py
ScrapeMynetwMySQL/: fetch_page_content.py  main.py  parse_html.py  save_to_database.py  search_stock.py
